--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,9 @@
-# .github/workflows/release.yml
-name: QGIS Plugin – GitHub Release (monorepo)
+name: QGIS Plugin - GitHub Release (monorepo)
+
 on:
   push:
-    tags: ["*-v*.*.*"]
+    tags:
+      - "*-v*.*.*"  # e.g. raster_stretch_2_98-v0.1.0
 
 permissions:
   contents: write
@@ -17,13 +18,16 @@ jobs:
         id: parse
         run: |
           TAG="${GITHUB_REF_NAME}"
-          echo "plugin=${TAG%%-v*}"   >> $GITHUB_OUTPUT
-          echo "version=${TAG##*-v}" >> $GITHUB_OUTPUT
+          echo "plugin=${TAG%%-v*}"   >> "$GITHUB_OUTPUT"
+          echo "version=${TAG##*-v}" >> "$GITHUB_OUTPUT"
 
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.11" }
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-      - run: pip install --upgrade qgis-plugin-ci pyqt5
+      - name: Install build deps
+        run: pip install --upgrade qgis-plugin-ci pyqt5
 
       - name: Write config (points to just this plugin)
         run: |
@@ -33,11 +37,13 @@ jobs:
       - name: Package
         run: qgis-plugin-ci package ${{ steps.parse.outputs.version }}
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.parse.outputs.plugin }}-${{ steps.parse.outputs.version }}
           path: build/*.zip
 
       - name: Create GitHub Release (for the same tag)
-        env: { GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} }
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: qgis-plugin-ci release ${{ steps.parse.outputs.version }} --github-token "$GITHUB_TOKEN" --release-tag "${GITHUB_REF_NAME}"
