--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ name: QGIS Plugin - GitHub Release (monorepo)
 on:
   push:
     tags:
-      - "*-v*.*.*"   # e.g. raster_stretch_2_98-v0.1.0
+      - "*-v*.*.*"  # e.g. raster_stretch_2_98-v0.1.0
 
 permissions:
   contents: write
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0          # safer for tag/metadata
+          fetch-depth: 0
 
       - name: Parse tag -> PLUGIN + VERSION
         id: parse
@@ -36,13 +36,17 @@ jobs:
           {
             echo "plugin_path: plugins/${{ steps.parse.outputs.plugin }}";
             echo "changelog_path: plugins/${{ steps.parse.outputs.plugin }}/CHANGELOG.md";
-            # tell qgis-plugin-ci explicitly which repo to release to (fixes 404)
-            echo "plugin_repo_url: https://github.com/${{ github.repository }}";
           } > .qgis-plugin-ci
           cat .qgis-plugin-ci
 
       - name: Package
         run: qgis-plugin-ci package ${{ steps.parse.outputs.version }}
+
+      - name: Show possible ZIP locations (debug)
+        run: |
+          ls -al || true
+          ls -al build || true
+          ls -al plugins || true
 
       - name: Upload artifact (ZIP)
         uses: actions/upload-artifact@v4
@@ -56,8 +60,4 @@ jobs:
       - name: Create GitHub Release for this tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          qgis-plugin-ci release ${{ steps.parse.outputs.version }} \
-            --github-token "$GITHUB_TOKEN" \
-            --release-tag "${GITHUB_REF_NAME}" \
-            -u "https://github.com/${{ github.repository }}"
+        run: qgis-plugin-ci release ${{ steps.parse.outputs.version }} --github-token "$GITHUB_TOKEN" --release-tag "${GITHUB_REF_NAME}"
